--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "app_web_scrapper",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +15,14 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kpkpixels/app_web_scrapper.git"
+  },
+  "bugs": {
+    "url": "https://github.com/kpkpixels/app_web_scrapper/issues"
+  },
+  "homepage": "https://github.com/kpkpixels/app_web_scrapper#readme",
+  "description": ""
 }
